Writing passing integration spec for dealership index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,10 @@
-<h1>Welcome to Vehicle Saver 3.0</h1>
+<h1>Welcome to Dealership Central 3.0</h1>
 <h5>Saving vehicles since the fall of the Roman Empire</h5>
 
 
 <ul>
-<li><a href="/all_vehicles">See Vehicle List</a></li>
-<li><a href="/all_vehicles/new">Add New Vehicle</a></li>
+<li><a href="/all_vehicles">See Dealership List</a></li>
+<li><a href="/all_vehicles/new">Add New Dealership</a></li>
 </ul>
 <nr>
 <br>
