Writing passing spec to input new dealerships

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,8 @@
 
 
 <ul>
-<li><a href="/all_vehicles">See Dealership List</a></li>
-<li><a href="/all_vehicles/new">Add New Dealership</a></li>
+<li><a href="/all_dealers/">See Dealership List</a></li>
+<li><a href="/all_dealers/new">Add New Dealership</a></li>
 </ul>
 <nr>
 <br>
